--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ h1{
     align-items: center;
     width: 70vh;
     height: 70vh;
-    background-color: rgb(249, 131, 190);
+    background-color: #ffd0db;
     border: 50px solid #fd5cb2;
     overflow: hidden;
     position: relative;
